syntax = "proto3";

enum UserNotification {
    Unknown = 0;
    UserAuthChanged = 1;
    UserProfileUpdated = 2;
    UserUnauthorized = 3;
}
